some problems fixed